--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -104,7 +104,9 @@
             var paths = {
                 "H": "/Images/HeadSnake.png",
                 "B": "/Images/BodySnake.png",
-                "A": "/Images/Apple.png"
+                "A": "/Images/Apple.png",
+                "W": "/Images/Terrain.png",
+                "S": "/Images/Spawn.png",
             };
 
             var images = {};
