--- a/WebApi/wwwroot/game.html
+++ b/WebApi/wwwroot/game.html
@@ -65,7 +65,7 @@
         </div>
         <div class="nav-item">
             <b>Кол-во яблок:</b>
-            <input type="number" id="apples-count" class="nav-item" value="10" />
+            <input type="number" id="apples-count" class="nav-item" value="10" disabled/>
         </div>
         <div class="nav-item">
             Game Tick:<b id="tick" class="nav-item">0</b>
