--- a/WebApi/wwwroot/game.html
+++ b/WebApi/wwwroot/game.html
@@ -65,7 +65,7 @@
         </div>
         <div class="nav-item">
             <b>Кол-во яблок:</b>
-            <input type="number" id="apples-count" class="nav-item" value="10" disabled/>
+            <input type="number" id="apples-count" class="nav-item" value="10" disabled />
         </div>
         <div class="nav-item">
             Game Tick:<b id="tick" class="nav-item">0</b>
@@ -110,7 +110,7 @@
             console.log(moduleData);
             var b64moduleData = "data:text/javascript;base64," + btoa(moduleData);
             window.bot = await import(b64moduleData);
-			window.bot.tick();
+            window.bot.tick();
         }
 
         function bot_act() {
@@ -153,19 +153,25 @@
             for (var i = table.rows.length; i < playrs_info.length + 1; i++) {
                 var row = table.insertRow();
                 row.innerHTML = `<td></td>
-                    <td></td>
-                    <td align="right"></td>`;
+                        <td></td>
+                        <td align="right"></td>`;
             }
 
             for (var i = 0; i < playrs_info.length; i++) {
                 var info = playrs_info[i];
-                var cells = table.rows[i+1].children;
+                var cells = table.rows[i + 1].children;
 
-                cells[0].innerText = i+1;
+                cells[0].innerText = i + 1;
                 cells[1].innerText = info.name;
                 cells[2].innerText = info.score;
             }
         }
+
+        const params = new Proxy(new URLSearchParams(window.location.search), {
+            get: (searchParams, prop) => searchParams.get(prop),
+        });
+        // Get the value of "some_key" in eg "https://example.com/?some_key=some_value"
+        console.log(params.game);
     </script>
 </body>
 </html>
