--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -26,6 +26,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            height: 80vh;
         }
 
         canvas{
@@ -39,7 +40,7 @@
         }
 
         .item {
-            margin: 20px;
+            margin: 10px;
         }
 
         table {
@@ -67,16 +68,22 @@
                 <span>Кол-во яблок:</span>
                 <input type="number" id="apples-count" class="nav-item" value="10" onchange="window.applesCount = parseInt(this.value)" />
             </div>
+            <table id="members" class="item">
+                <caption> Участники </caption>
+                <tr>
+                    <th>Игрок</th>
+                    <th>Рейтинг</th>
+                    <th></th>
+                </tr>
+            </table>
             <div class="item">
-
                 <span>Выбор карты:</span>
-                <select id="map-choise" onchange="choise_map();draw_map()">
+                <select id="map-choise" onchange="draw_map()">
                 </select>
-
             </div>
             <canvas id="map-canvas"></canvas>
             <div class="item">
-                <a href="game.html">СОЗДАТЬ ИГРУ</a>
+                <button onclick="create_game()">СОЗДАТЬ ИГРУ</button>
             </div>
         </div>
 
@@ -91,19 +98,14 @@
                     <th>Вызов</th>
                 </tr>
                 <tr>
-                    <td>Whoami</td>
+                    <td>RandomBot</td>
                     <td>1500</td>
-                    <td><button onclick="location.href='game.html?game=100'">Вызвать</button></td>
+                    <td><button onclick="join_game(this)">Вызвать</button></td>
                 </tr>
                 <tr>
-                    <td>Anonim</td>
+                    <td>SimpleBot</td>
                     <td>1500</td>
-                    <td><button onclick="">Вызвать</button></td>
-                </tr>
-                <tr>
-                    <td>Test</td>
-                    <td>1500</td>
-                    <td><button onclick="">Вызвать</button></td>
+                    <td><button onclick="join_game(this)">Вызвать</button></td>
                 </tr>
             </table>
             <table>
@@ -121,14 +123,16 @@
                     <td>1/4</td>
                 </tr>
             </table>
+           <div id="message-box">
+
+           </div>
         </div>
-
-
     </div>
+
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
     <script src="js/draw.js"></script>
-
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    
     <script>
         $(document).ready(function () {
             console.log("document loaded");
@@ -138,17 +142,52 @@
                     console.log("websocket connected");
                     await update_maps();
                     console.log("map updated");
-                    choise_map();
                 });
-
         });
 
-        $(window).on("load", function () {
-            console.log("window loaded");
-        });
-    </script>
+        window.members = [];
 
-    <script>
+        function join_game(cell) {
+            var r = cell.parentElement.parentElement.cells;
+            var table = $('#members')[0];
+            var row = table.insertRow();
+            var player = r[0].innerText;
+            var rate = r[1].innerText;
+            var index = members.push({ name: player, row: row, index: members.length }) - 1;
+            row.innerHTML = (`<td>${player}</td>
+                        <td>${rate}</td>
+                        <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
+        }
+
+        function exclude_game(index) {
+            var member = window.members.find(v => v.index === index);
+            index = window.members.indexOf(member);
+            if (index > -1) {
+                window.members.splice(index, 1);
+            }
+            member.row.remove();
+            console.log(window.members);
+        }
+
+        function create_game() {
+            var players = window.members.map(v => v.name);
+
+            console.log(players);
+
+            var gameId = makeid(5);
+
+            console.log(gameId);
+
+            hubConnection.invoke("StartGame", {
+                mapName: get_choised_mapinfo().name,
+                gameId: gameId,
+                applesCount: window.applesCount,
+                players: players
+
+            }).then(() => {
+                location.href = `game.html?game_id=${gameId}`;
+            });
+        }
 
         window.applesCount = 10;
 
@@ -156,20 +195,9 @@
             .withUrl("/main")
             .build();
 
-
-        window.onload = function () {
-        };
-
-        hubConnection.on("ReceiveMessage", (message) => {
+        hubConnection.on("ShowMessage", (msg) => {
+            console.log(`Сообщение с сервера: ${msg}`);
         });
-
-        function join(group) {
-            hubConnection.invoke("Join", group);
-        }
-
-        function send_message(message) {
-            hubConnection.invoke("SendMessage", message);
-        }
 
         async function update_maps() {
             var select = document.getElementById("map-choise");
@@ -180,15 +208,7 @@
 
                 select.appendChild(new Option(result[i].name));
             }
-
             await draw_map();
-        }
-
-        function choise_map() {
-            var applesCount = window.applesCount;
-
-            console.log(applesCount);
-            hubConnection.invoke("SetMap", get_choised_mapinfo().name, applesCount);
         }
 
         function get_choised_mapinfo() {
@@ -200,6 +220,17 @@
             var map_canvas = document.getElementById("map-canvas");
             console.log(map_canvas);
             await draw_board(map_canvas, stringmap, 320, 320);
+        }
+
+        function makeid(length) {
+            var result = '';
+            var characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            var charactersLength = characters.length;
+            for (var i = 0; i < length; i++) {
+                result += characters.charAt(Math.floor(Math.random() *
+                    charactersLength));
+            }
+            return result;
         }
     </script>
 </body>
