--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <header>
-        <h3 class="item">SnakeArena</h3>
+        <h3 class="item">SnakeArena Test</h3>
         <div>
             <h4 id="user-name"></h4>
             <button class="item" onclick="show_auth()">Авторизоваться</button>
