--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -21,9 +21,8 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-
-            position: absolute;
             background-color: gray;
+            position: fixed;
             top: 0px;
             width: 100vw;
         }
