--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -104,7 +104,7 @@
                 <h2 class="mb-3">Создание игры</h2>
 
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
 
                         <form>
                             <div class="row mb-3">
@@ -142,7 +142,7 @@
 
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <div class="row mb-3">
                             <label class="form-label col-5">Выбор карты:</label>
                             <div class="col">
