--- a/WebApi/wwwroot/game.html
+++ b/WebApi/wwwroot/game.html
@@ -3,59 +3,31 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SnakeArena</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <title>SnakeArena</title>
     <style>
-        #content {
-            height: 100vh;
-            width: 100vw;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            background-color: beige;
-            font-family: Consolas;
+        body {
+            box-shadow: inset 0px 0px 10px black;
+            background: rgb(241, 241, 241);
+            min-height: 100vh;
         }
 
-        #nav {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
+        table {
+            background: rgb(255, 255, 255);
+            border: 1px solid black;
+            /*       box-shadow: 0px 0px 5px black;*/
         }
 
-        .nav-item {
-            margin: 10px;
-        }
-
-        #inputForm {
-            display: flex;
-            flex-direction: column;
+        .overflow {
+            overflow: scroll;
+            max-height: 250px;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         #canvas {
             background-color: dimgrey;
-        }
-
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td, th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-
-        #apples-count {
-            width: 50px;
         }
     </style>
 </head>
@@ -101,45 +73,50 @@
         </div>
     </div>
 
-    <div id="content">
-        <div id="nav">
-            <div id="inputForm" class="nav-item">
-                <input type="button" id="startBtn" class="nav-item" value="Начать игру" onclick="start_game()" />
-                <input type="button" id="stopBtn" class="nav-item" value="Остановить игру" onclick="stop_game()" />
-            </div>
-            <div class="nav-item" id="game-info">
-                <div class="nav-item">
-                    <b>Карта:</b><span id="map-name"></span>
-                </div>
-                <div class="nav-item">
-                    <b>Состояние игры:</b><span id="game-state"></span>
-                </div>
-                <div class="nav-item">
-                    <b>Ограничение по тикам:</b><span id="ticks-to-end"></span>
-                </div>
-                <div class="nav-item">
-                    <b>Кол-во яблок:</b><span id="apples-count"></span>
+    <!-- Content -->
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 me-5 col-lg-4">
+
+                <div class="mt-4" id="inputForm">
+                    <input class="form-control mb-3" type="button" id="startBtn" value="Начать игру" onclick="start_game()" />
+                    <input class="form-control" type="button" id="stopBtn" value="Остановить игру" onclick="stop_game()" />
                 </div>
 
+                <div class="ms-2" id="game-info">
+                    <div class="mt-3">
+                        <b>Карта: </b><span id="map-name"></span>
+                    </div>
+                    <div class="mt-3">
+                        <b>Состояние игры: </b><span id="game-state"></span>
+                    </div>
+                    <div class="mt-3">
+                        <b>Ограничение по тикам: </b><span id="ticks-to-end"></span>
+                    </div>
+                    <div class="mt-3">
+                        <b>Кол-во яблок: </b><span id="apples-count"></span>
+                    </div>
+                    <div class="mt-3">
+                        <b>Game Tick: </b><span id="tick" class="">0</span>
+                    </div>
+                </div>
+
+                <div class="mt-3">
+                    <table class="table" id="players" cellspacing="10">
+                        <tr>
+                            <th scope="col">№</th>
+                            <th scope="col" align="left">Player Name</th>
+                            <th scope="col" align="right">Score</th>
+                        </tr>
+                    </table>
+                </div>
             </div>
-            <div class="nav-item">
-                Game Tick:<b id="tick" class="nav-item">0</b>
-            </div>
-            <div class="nav-item">
-                <table id="players" cellspacing="10">
-                    <tr>
-                        <th>№</th>
-                        <th align="left">Player Name</th>
-                        <th align="right">Score</th>
-                    </tr>
-                </table>
+
+            <div class="col-12 col-lg">
+                <canvas id="canvas"></canvas>
             </div>
         </div>
-
-        <canvas id="canvas"></canvas>
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
@@ -228,8 +205,8 @@
             for (var i = table.rows.length; i < playrs_info.length + 1; i++) {
                 var row = table.insertRow();
                 row.innerHTML = `<td></td>
-                                    <td></td>
-                                    <td align="right"></td>`;
+                                        <td></td>
+                                        <td align="right"></td>`;
             }
 
             for (var i = 0; i < playrs_info.length; i++) {
