--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="light">
-
-
+    
+    <!--<meta name="color-scheme" content="light">-->
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)" crossorigin="anonymous">-->
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap.min.css" rel="stylesheet" media="(prefers-color-scheme: light)" crossorigin="anonymous">-->
 
@@ -43,7 +42,7 @@
         }*/
     </style>
 </head>
-<body class="color-scheme-dark">
+<body class="">
     <!-- Header -->
     <header class="p-2">
         <div class="container">
@@ -181,11 +180,8 @@
                         <canvas id="map-canvas"></canvas>
                     </div>
                     
-
                 </div>
-
             </div>
-
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
@@ -202,6 +198,7 @@
 
             hubConnection.start()
                 .then(async function () {
+                    await update_maps();
                     await info_update();
                     await setInterval(info_update, 4000);
                 });
@@ -210,7 +207,6 @@
         window.members = [];
 
         async function info_update() {
-            await update_maps();
             await update_games();
             await update_players();
             console.log("updated");
