--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -49,7 +49,7 @@
             <div class="row d-flex align-items-center justify-content-center justify-content-md-between py-1  border-bottom">
 
                 <a href="/" class="col-12 col-md text-md-start text-center text-decoration-none text-dark">
-                    <img class="me-3" src="logo.png"/>
+                    <img class="me-3" src="logo.png" />
                     <span class="h4">SnakeArena</span>
                 </a>
 
@@ -57,8 +57,9 @@
                     <li><span id="user-name" class="nav-link px-2 text-black">Login</span></li>
                 </ul>
 
-                <div class="col-md-2 text-center">
-                    <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#authModal">Авторизироваться</button>
+                <div class="col-md-3 text-center row">
+                    <button class="btn col-5 me-3" type="button">Токен Бота</button>
+                    <button class="btn col-6" type="button" data-bs-toggle="modal" data-bs-target="#authModal">Авторизироваться</button>
                 </div>
             </div>
         </div>
@@ -104,11 +105,17 @@
                             <caption class="text-center">
                                 Список игроков
                             </caption>
-                            <tr>
-                                <th scope="col">Игрок</th>
-                                <th scope="col">Рейтинг</th>
-                                <th scope="col">Вызов</th>
-                            </tr>
+                            <thead>
+                                <tr>
+                                    <th scope="col">Игрок</th>
+                                    <th scope="col">Рейтинг</th>
+                                    <th scope="col">Вызов</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
                     <div class="tab-pane fade overflow" style="max-height:500px" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
@@ -148,7 +155,7 @@
                                 </div>
 
                             </div>
-       
+
                         </form>
 
                         <div class="item mb-3">
@@ -179,15 +186,16 @@
                         </div>
                         <canvas id="map-canvas"></canvas>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
-    <script src="js/draw.js"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/common.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -208,42 +216,9 @@
 
         async function info_update() {
             await update_games();
+            await update_my();
             await update_players();
             console.log("updated");
-        }
-
-        async function login() {
-            var login = $('#login')[0].value;
-            var password = $('#password')[0].value;
-
-            var result = await fetch(`api/login?login=${login}&password=${password}`)
-            var answer = await result.text();
-
-            if (!result.ok) {
-                show_error(answer);
-                return;
-            }
-
-            location.reload();
-        }
-
-        async function reg() {
-            var login = $('#login')[0].value;
-            var password = $('#password')[0].value;
-
-            var result = await fetch(`api/reg?login=${login}&password=${password}`)
-            var answer = await result.text();
-
-            if (!result.ok) {
-                show_error(answer);
-                return;
-            }
-
-            location.reload();
-        }
-
-        function show_error(msg) {
-            alert(msg);
         }
 
         function onclick_join_game(cell) {
@@ -254,16 +229,16 @@
             var rate = r[1].innerText;
             var index = members.push({ name: player, row: row, index: members.length }) - 1;
             row.innerHTML = (`<td>${player}</td>
-                                <td>${rate}</td>
-                                <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
+                                        <td>${rate}</td>
+                                        <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
         }
 
         function join_game() {
 
             var index = members.push({ name: player, row: row, index: members.length }) - 1;
             row.innerHTML = (`<td>${player}</td>
-                                <td>${rate}</td>
-                                <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
+                                        <td>${rate}</td>
+                                        <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
         }
 
         function exclude_game(index) {
@@ -325,7 +300,7 @@
             var games = await hubConnection.invoke("GetGames");
             var table = $('#games')[0];
 
-            $("#games tr").remove();
+            $("#games td").remove();
 
             var get_game_state = (inf) => {
                 if (inf.isOver) return "Заверешена";
@@ -338,29 +313,26 @@
                 var info = games[i];
                 var startGameInfo = info.startGameInfo;
                 row.innerHTML = `<td>Snake</td >
-                                <td>${startGameInfo.mapName}</td>
-                                <td>${startGameInfo.players}</td>
-                                <td>${get_game_state(info)}</td>
-                                <td><a href="game.html?game_id=${startGameInfo.gameId}">Смотреть</a></td>`;
+                                        <td>${startGameInfo.mapName}</td>
+                                        <td>${startGameInfo.players}</td>
+                                        <td>${get_game_state(info)}</td>
+                                        <td><a href="game.html?game_id=${startGameInfo.gameId}">Смотреть</a></td>`;
             }
         }
 
         async function update_players() {
             var players = await hubConnection.invoke("GetPlayers");
-            var myPlayer = await hubConnection.invoke("GetMe");
-            var myToken = await hubConnection.invoke("GetMyToken");
-            $('#user-name')[0].innerText = `${myToken} ${myPlayer.name} ${myPlayer.rate}`;
             var table = $('#players')[0];
 
-            $("#players tr").remove();
+            $("#players td").remove();
 
             for (var i = 0; i < players.length; i++) {
                 var row = table.insertRow();
                 var player = players[i];
                 row.innerHTML = `
-                                <td>${player.name}</td>
-                                <td>${player.rate}</td>
-                                <td><button onclick="onclick_join_game(this)">Вызвать</button></td>`;
+                                        <td>${player.name}</td>
+                                        <td>${player.rate}</td>
+                                        <td><button onclick="onclick_join_game(this)">Вызвать</button></td>`;
             }
         }
 
@@ -383,7 +355,7 @@
         async function draw_map() {
             var stringmap = get_choised_mapinfo().map;
             var map_canvas = document.getElementById("map-canvas");
-            await draw_board(map_canvas, stringmap, 320, 320);
+            await draw_board(map_canvas, { map: stringmap }, 320, 320);
         }
 
         function makeid(length) {
