--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -16,12 +16,13 @@
             box-shadow: inset 0px 0px 10px black;
             background: rgb(241, 241, 241);
             min-height: 100vh;
+            position: relative;
         }
 
         table {
             background: rgb(255, 255, 255);
             border: 1px solid black;
-     /*       box-shadow: 0px 0px 5px black;*/
+            /*       box-shadow: 0px 0px 5px black;*/
         }
 
         .overflow {
@@ -58,14 +59,14 @@
                 </ul>
 
                 <div class="col-md-3 text-center row">
-                    <button class="btn col-5 me-3" type="button">Токен Бота</button>
+                    <button class="btn col-5 me-3" type="button" data-bs-toggle="modal" data-bs-target="#botModal">Бот</button>
                     <button class="btn col-6" type="button" data-bs-toggle="modal" data-bs-target="#authModal">Авторизироваться</button>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- Modal -->
+    <!-- Modal Reg -->
     <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -80,6 +81,27 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="login()">Авторизоваться</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="reg()">Зарегестрироваться</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Bot -->
+    <div class="modal fade" id="botModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Мой бот</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <span class="form-label me-2 mb-3">Токен бота:</span>
+                    <button type="button" class="btn"  onclick="copy_token(this)">Скопировать токен бота</button>
+                    <br />
+                    <span class="form-label me-3">Статус бота:</span><span class="form-label" id="bot-status">TODO</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="">Ок</button>
                 </div>
             </div>
         </div>
@@ -191,6 +213,20 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Footer -->
+    <div class="wrap" style="padding-bottom: 5rem">
+    </div>
+    <footer class="position-absolute bottom-0" style="width:100%">
+        <div class="container text-center text-lg-start border-top">
+            <div class="text-center p-2">
+                <span class="me-3" id="build_time"></span>
+                <a class="text-dark" href="https://github.com/Tetraclor/SnakeArena1.0">https://github.com/Tetraclor/SnakeArena</a>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -229,16 +265,16 @@
             var rate = r[1].innerText;
             var index = members.push({ name: player, row: row, index: members.length }) - 1;
             row.innerHTML = (`<td>${player}</td>
-                                        <td>${rate}</td>
-                                        <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
+                                                            <td>${rate}</td>
+                                                            <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
         }
 
         function join_game() {
 
             var index = members.push({ name: player, row: row, index: members.length }) - 1;
             row.innerHTML = (`<td>${player}</td>
-                                        <td>${rate}</td>
-                                        <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
+                                                            <td>${rate}</td>
+                                                            <td><button onclick="exclude_game(${index})">Исключить</button></td>`);
         }
 
         function exclude_game(index) {
@@ -313,10 +349,10 @@
                 var info = games[i];
                 var startGameInfo = info.startGameInfo;
                 row.innerHTML = `<td>Snake</td >
-                                        <td>${startGameInfo.mapName}</td>
-                                        <td>${startGameInfo.players}</td>
-                                        <td>${get_game_state(info)}</td>
-                                        <td><a href="game.html?game_id=${startGameInfo.gameId}">Смотреть</a></td>`;
+                                                            <td>${startGameInfo.mapName}</td>
+                                                            <td>${startGameInfo.players}</td>
+                                                            <td>${get_game_state(info)}</td>
+                                                            <td><a href="game.html?game_id=${startGameInfo.gameId}">Смотреть</a></td>`;
             }
         }
 
@@ -330,9 +366,9 @@
                 var row = table.insertRow();
                 var player = players[i];
                 row.innerHTML = `
-                                        <td>${player.name}</td>
-                                        <td>${player.rate}</td>
-                                        <td><button onclick="onclick_join_game(this)">Вызвать</button></td>`;
+                                                            <td>${player.name}</td>
+                                                            <td>${player.rate}</td>
+                                                            <td><button onclick="onclick_join_game(this)">Вызвать</button></td>`;
             }
         }
 
