--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -51,7 +51,7 @@
 
                 <a href="/" class="col-12 col-md text-md-start text-center text-decoration-none text-dark">
                     <img class="me-3" src="logo.png" />
-                    <span class="h4">SnakeArena</span>
+                    <span class="h4">SnakeArena Hello Andrey! :)</span>
                 </a>
 
                 <ul class="nav col-md-4 justify-content-center">
